--- a/mycss.css
+++ b/mycss.css
@@ -5,21 +5,33 @@ CSS for HW1
 body 
 {               
     font-family: Verdana, Helvetica, Arial, sans-serif;               
-    background-color:blue;               
+    background-color:black;               
     //line-height: 125%;               
     padding: 0px; 
-    background-image:url('openwindow.jpg');   
+      background-image:url('openwindow.jpg');
     //opacity:.2;
     //filter:alpha(opacity=2);            
 }   
 
+#image
+{
+    background-image:url('openwindow.jpg');
+    width:2000;
+    height:2000;
+    margin:0 auto;
+    position:fixed;
+    top:0px;
+    left:0px; 
+    z-index:10;
+}
 div.bkground
 {
+    float:left;
     position:fixed;
-    top:85px;
-    left:100px;
-    width:400;
-    height:500;
+    top:0px;//85px;
+    left:135px;//100px;
+    //width:1000//400;
+    //height:1000//500;
     //width:170px;
     //height:300px;
     //margin:0px 0px 0px 0px
@@ -30,19 +42,39 @@ div.bkground
     filter:alpha(opacity=1.5);
     //margin-left:auto;
     //margin-right:auto;
+    z-index:50;
     
+}
+
+#content
+{
+    //position:fixed;
+    //top:700px;
+    //right:400px;
+    display:block;
+    z-index:90;
+}
+
+table
+{
+    //margin:50px;
 }
 
 form
 {
-    color:white;
+    color: white;
+    display:inline;
+}
+input
+{
+    display:inline;
 }
 
 div .input
 {
     display:inline;
-    margin:3px;
-    border:3px solid white;
+    //margin:3px;
+    border:3px solid black;
 }
 
 div .info
